syntax = "proto3";

package user;


service UserService {
  rpc NewUser (NewUserReq) returns (NewUserRes) {}
}

message NewUserReq {
  string name = 1;
}

message NewUserRes {
  string jwt = 1;
}
